--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,11 +18,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Button"
-        android:id="@+id/button"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="94dp"
-        android:clickable="true" />
+        android:id="@+id/bt_test"
+        android:clickable="true"
+        android:layout_marginBottom="66dp"
+        android:layout_above="@+id/switch1"
+        android:layout_toStartOf="@+id/checkBox" />
 
     <Switch
         android:layout_width="wrap_content"
@@ -30,5 +30,14 @@
         android:text="New Switch"
         android:id="@+id/switch1"
         android:layout_centerVertical="true"
-        android:layout_alignEnd="@+id/button" />
+        android:layout_alignEnd="@+id/bt_test" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New CheckBox"
+        android:id="@+id/checkBox"
+        android:layout_below="@+id/switch1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="64dp" />
 </RelativeLayout>
